--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Appetite Food </title>
+    <title>Appetite Food Contact</title>
 </head>
 <body>
-    <h1>Home page</h1>
+    <h1>Contact</h1>
     <ul>
-       <li><a href="{{ url_for('index') }}">Home</a></li>
-        <li><a href="{{ url_for('contact') }}">Contact</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/contact">Contact</a></li>
     </ul>
     
 </body>
