--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
+    <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet" >
     <link rel="stylesheet" href="{{ url_for('static',filename='css/clean-blog.min.css')}}">
     <title>Appetite Food </title>
 </head>
@@ -41,11 +41,14 @@
 
 
     {% block content %} {% endblock %}
-   
 
 
 
 
+    <script src="{{url_for('static',filename='vendor/jquery/jquery.min.js')}}"></script>
+    <script src="{{url_for('static',filename='vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
+
+    <script src="{{url_for('static',filename='js/clean-blog.min.js')}}"></script>
 </body>
 
 </html>
