header background added

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,18 @@
 {% extends 'layout.html' %}
+{% block img %}
+<header class="masthead" style="background-image: url('../static/img/phone.jpg')">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="site-heading">
+          <h1>Contact Us</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+{% endblock %} 
   {% block content %}
       <h1>Contact page</h1>
     {% endblock %}
