--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,6 +39,11 @@
         </div>
     </nav>
 
+      <!-- Page Header -->
+    {% block img %}
+
+    {% endblock %}
+   
 
     {% block content %} {% endblock %}
 
