created recipes.json file

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
-{% extends 'layout.html' %} 
-{% block img %}
+{% extends 'layout.html' %} {% block img %}
 <header class="masthead" style="background-image: url('../static/img/carrot.jpg')">
   <div class="overlay"></div>
   <div class="container">
@@ -13,7 +12,4 @@
     </div>
   </div>
 </header>
-{% endblock %} 
-{% block content %}
-<h1>Home page</h1>
-{% endblock %}
+{% endblock %} {% block content %} {% endblock %}
