--- a/static/css/clean-blog.css
+++ b/static/css/clean-blog.css
@@ -407,3 +407,8 @@ footer .copyright {
   font-size: 16px;
   padding: 25px 35px;
 }
+.card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
