--- a/templates/index.html
+++ b/templates/index.html
@@ -12,4 +12,28 @@
     </div>
   </div>
 </header>
-{% endblock %} {% block content %} {% endblock %}
+{% endblock %}
+{% block content %} 
+ <div class="container">
+   <div class="row text-center">
+{% for recipe in recipes %}
+
+
+
+      <div class="col-lg-3 col-md-6 mb-4">
+        <div class="card h-100">
+          <img class="card-img-top" src="{{recipe.image}}" alt="">
+          <div class="card-body">
+            <h4 class="card-title">{{recipe.name}}</h4>
+            
+          </div>
+          
+        </div>
+      </div>
+ 
+
+{% endfor %}
+ </div>
+</div>
+
+{% endblock %}
