--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet" >
     <link rel="stylesheet" href="{{ url_for('static',filename='css/clean-blog.min.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css')}}">
     <title>Appetite Food </title>
 </head>
 
