--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,13 @@
 .card-img-top {
     width: 100%;
-    height: 15vw;
+    height: 45vh;
     object-fit: cover;
+}
+.card{
+    border: none;
+}
+@media (min-width: 576px){
+  .card-img-top{
+       height:15vh;
+  }
 }
