--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,8 +6,8 @@
 .card{
     border: none;
 }
-@media (min-width: 576px){
+@media only screen and (min-width: 768px){
   .card-img-top{
-       height:15vh;
+       height:25vh;
   }
 }
