--- a/templates/index.html
+++ b/templates/index.html
@@ -18,13 +18,12 @@
    <div class="row text-center">
 {% for recipe in recipes %}
 
-
-
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
           <img class="card-img-top" src="{{recipe.image}}" alt="">
           <div class="card-body">
             <h4 class="card-title">{{recipe.name}}</h4>
+            <a href="/{{ recipe.id }}" class="btn btn-primary">Read More &rarr;</a>
             
           </div>
           
