--- a/templates/index.html
+++ b/templates/index.html
@@ -20,10 +20,13 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
+          <div class="animated">
           <img class="card-img-top" src="{{recipe.image}}" alt="">
+          <a href="/{{ recipe.id }}" class="btn btn-primary">Read More &rarr;</a>
+          </div>
           <div class="card-body">
             <h4 class="card-title">{{recipe.name}}</h4>
-            <a href="/{{ recipe.id }}" class="btn btn-primary">Read More &rarr;</a>
+            
             
           </div>
           
