--- a/templates/meal.html
+++ b/templates/meal.html
@@ -15,6 +15,7 @@
 </header>
 {% endblock %}
 {% block content %}
+<div class="container">
 <h2>{{meal.name}}</h2>
 <hr>
 <div class="row">
@@ -41,5 +42,6 @@
                 </ol>
     </div>
     
+</div>
 </div>
 {% endblock %}
