--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,11 @@
 {% for recipe in recipes %}
 
       <div class="col-lg-3 col-md-6 mb-4">
+        
         <div class="card h-100">
           <div class="animated">
           <img class="card-img-top" src="{{recipe.image}}" alt="">
-          <a href="/{{ recipe.id }}" class="btn btn-primary">Read More &rarr;</a>
-          </div>
+         <p class="button"><a>Read more</a></p>
           <div class="card-body">
             <h4 class="card-title">{{recipe.name}}</h4>
             
