--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,11 +24,11 @@
 	padding:5px 10px;
 	border-radius:10px;
 	color:#fff;
-	background:#16b1ff;
+	background:#007bff;
 }
 
 .animated:hover img{
-	opacity: 0.4;
+	opacity: 0.6;
 }
 .animated * {
 	transition: all 500ms ease-in-out;
