--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 .card-img-top {
     width: 100%;
-    height: 45vh;
+    height: 380px;
     object-fit: cover;
 }
 .card{
@@ -39,7 +39,7 @@
 }
 @media only screen and (min-width: 768px){
   .card-img-top{
-       height:25vh;
+       height:220px;
   }
   .button{
   	top:20%;
