--- a/templates/meal.html
+++ b/templates/meal.html
@@ -16,8 +16,15 @@
 {% endblock %}
 {% block content %}
 <div class="container">
-    <div class="recipe_header">
-        <h2>{{recipe.name}}</h2>
+    <div class=" row justify-content-between recipe_header">
+        <div class="recipe_name col-xs-8">
+            <h2>{{recipe.name}}</h2>
+        </div>
+        
+        <div class="icons col-xs-4">
+            <a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}"><i class="fas fa-edit edit"></i></a>
+            <a href=""><i class="fas fa-trash-alt delete"></i></a>
+        </div>
     </div>
 
 <hr>
