--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,24 +1,27 @@
-{% extends 'layout.html' %}
+{% extends "layout.html" %}
 {% block img %}
-<header class="masthead" style="background-image: url('../static/img/phone.jpg')">
+<header class="masthead" style="background-image: url('../static/img/bread.jpg')">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <div class="site-heading">
-          <h1>Contact Us</h1>
+ <h1>Cook with Us</h1>
+          <span class="subheading">Recipes created with passion and love</span>
         </div>
       </div>
     </div>
   </div>
 </header>
-{% endblock %} 
+{% endblock %}
+
 {% block content %}
-  <div class="container">
+<h3>Add Task</h3>
+
+ <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-        <form name="sentMessage" id="contactForm" novalidate>
+        <form name="sentMessage" id="contactForm" action='{{ url_for('insert_recipe')}}' method='POST'>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Name</label>
@@ -57,5 +60,5 @@
     </div>
   </div>
 
-  <hr>
-    {% endblock %}
+
+{% endblock %}
