added contact form validation

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -92,6 +92,8 @@
     <script src="{{url_for('static',filename='vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
 
     <script src="{{url_for('static',filename='js/clean-blog.min.js')}}"></script>
+    <script src="{{url_for('static',filename='js/contact_me.js')}}"></script>
+    <script src="{{url_for('static',filename='js/jqBootstrapValidation.js')}}"></script>
 </body>
 
 
