--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <div class="site-heading">
- <h1>Cook with Us</h1>
+ <h1>Add recipe</h1>
           <span class="subheading">Recipes created with passion and love</span>
         </div>
       </div>
@@ -16,38 +16,34 @@
 {% endblock %}
 
 {% block content %}
-<h3>Add Task</h3>
+<h3>Add recipe</h3>
 
  <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <form name="sentMessage" id="contactForm" action='{{ url_for('insert_recipe')}}' method='POST'>
+        <form name="sentMessage" id="contactForm" action='{{ url_for('insert_recipe')}}' method='POST' novalidate>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Name</label>
               <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-              <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
-              <label>Email Address</label>
-              <input type="email" class="form-control" placeholder="Email " id="email" required data-validation-required-message="Please enter your email address.">
-              <p class="help-block text-danger"></p>
+              <label>Description</label>
+              <input type="text" class="form-control" placeholder="Description " id="description" required data-validation-required-message="Please enter your email address.">
             </div>
           </div>
           <div class="control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label>Phone Number</label>
               <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-              <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Message</label>
               <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-              <p class="help-block text-danger"></p>
             </div>
           </div>
           <br>
