--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,9 +43,21 @@
     </nav>
 
       <!-- Page Header -->
-    {% block img %}
+     {% block img %}
 
     {% endblock %}
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <div class="site-heading">
+                    {% block header %} {% endblock %}
+                </div>
+            </div>
+        </div>
+    </div>
+     </header>
+   
    
 
     {% block content %} {% endblock %}
