--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,60 +1,112 @@
-{% extends "layout.html" %}
-{% block img %}
+{% extends "layout.html" %} 
+    {% block img %}
 <header class="masthead" style="background-image: url('../static/img/bread.jpg')">
-  <div class="overlay"></div>
-  <div class="container">
+    {% endblock %}
+    {% block header %}
+                    <h1>Add recipe</h1>
+                    <span class="subheading">Recipes created with passion and love</span>
+    {% endblock %}
+ {% block content %}
+
+<div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <div class="site-heading">
- <h1>Add recipe</h1>
-          <span class="subheading">Recipes created with passion and love</span>
+        <div class="col-lg-10 col-md-10 mx-auto">
+            <form name="sentMessage" id="contactForm" action='{{ url_for('insert_recipe')}}' method='POST' novalidate>
+                <div class="control-group">
+                    <div class="form-group floating-label-form-group controls">
+                        <label>Recipe Name</label>
+                        <input type="text" class="form-control" placeholder="Recipe Name" id="name" required data-validation-required-message="Please enter name of the recipe.">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                </div>
+                <div class="control-group">
+                    <div class="form-group floating-label-form-group controls">
+                        <label>Description</label>
+                        <textarea rows="3" class="form-control" placeholder="Description" id="description" required data-validation-required-message="Please enter a description."></textarea>
+                        <p class="help-block text-danger"></p>
+                    </div>
+                </div>
+                <div class="form-group floating-label-form-group controls">
+                    <label>Image</label>
+                    <input type="text" class="form-control" placeholder="Image url" id="image" required data-validation-required-message="Please url of the image.">
+                    <p class="help-block text-danger"></p>
+                </div>
+                </br>
+                <h3>Ingredients:</h3>
+                <div class="row justify-content-between">
+                    <div class="name col-md-6">
+                        <div class="control-group">
+                            <div class="form-group floating-label-form-group controls">
+                                <label>Name</label>
+                                <input type="text" class="form-control" placeholder="name" id="name" required data-validation-required-message="Please enter name of the ingredient.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="amount col-sm-4 col-md-2">
+                        <div class="control-group">
+                            <div class="form-group floating-label-form-group controls">
+                                <label>Amount</label>
+                                <input type="text" class="form-control" placeholder="Amount" id="name" required data-validation-required-message="Please enter ingredient amount.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="unit col-sm-4 col-md-2">
+                        <div class="control-group">
+                            <div class="form-group floating-label-form-group controls">
+                                <label>Unit</label>
+                                <input type="text" class="form-control" placeholder="Unit" id="name" required data-validation-required-message="Please enter ingredient unit.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="delete col-sm-1 col-md-1">
+                        <a href=""><i class="fas fa-trash-alt delete"></i></a>
+                    </div>
+                  
+                        
+                   
+                </div>
+                </br>
+                <div class="row ">
+                    <div class="col-sm-4 icons ">
+                            <a href="" add_ingredients><i class="fas fa-plus"></i>Add ingredient</a>
+                          
+                       </div>
+                </div>
+                </br>
+                <h3>Steps:</h3>
+                <div class="row ">
+                     <div class="control-group col-sm-11">
+                    <div class="form-group floating-label-form-group controls">
+                        <label>Step</label>
+                        <textarea row="2" class="form-control" placeholder="Step"  required data-validation-required-message="Please enter step."></textarea>
+                        <p class="help-block text-danger"></p>
+                    </div>
+                </div>
+                 <div class="delete col-sm-1 col-md-1">
+                        <a href=""><i class="fas fa-trash-alt delete"></i></a>
+                    </div>
+                </div>
+                                </br>
+                <div class="row ">
+                    <div class="col-sm-4 icons ">
+                            <a href="" add_ingredients><i class="fas fa-plus"></i>Add Step</a>
+                          
+                       </div>
+                </div>
+
+                <br>
+                <div id="success"></div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary" id="sendMessageButton">Apply</button>
+                </div>
         </div>
-      </div>
-    </div>
-  </div>
-</header>
-{% endblock %}
-
-{% block content %}
-<h3>Add recipe</h3>
-
- <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <form name="sentMessage" id="contactForm" action='{{ url_for('insert_recipe')}}' method='POST' novalidate>
-          <div class="control-group">
-            <div class="form-group floating-label-form-group controls">
-              <label>Name</label>
-              <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-            </div>
-          </div>
-          <div class="control-group">
-            <div class="form-group floating-label-form-group controls">
-              <label>Description</label>
-              <input type="text" class="form-control" placeholder="Description " id="description" required data-validation-required-message="Please enter your email address.">
-            </div>
-          </div>
-          <div class="control-group">
-            <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label>Phone Number</label>
-              <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-            </div>
-          </div>
-          <div class="control-group">
-            <div class="form-group floating-label-form-group controls">
-              <label>Message</label>
-              <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-            </div>
-          </div>
-          <br>
-          <div id="success"></div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
-          </div>
         </form>
-      </div>
     </div>
-  </div>
+</div>
+</div>
 
 
 {% endblock %}
