--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -1,18 +1,10 @@
 {% extends "layout.html" %}
 {% block img %}
 <header class="masthead" style="background-image: url('../static/img/bread.jpg')">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <div class="site-heading">
- <h1>Cook with Us</h1>
-          <span class="subheading">Recipes created with passion and love</span>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
+ {% endblock %} 
+{% block header %}
+  <h1>Cook with Us</h1>
+  <span class="subheading">Recipes created with passion and love</span>
 {% endblock %}
 
 {% block content %}
