add ingredient button create new fields

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,6 +56,9 @@
 .delete{
   color: red;
 }
+#ingredient{
+  display: none; 
+}
 @media only screen and (min-width: 768px){
   .card-img-top{
        height:220px;
