--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -33,45 +33,76 @@
                 </div>
                 </br>
                 <h3>Ingredients:</h3>
-                <div class="row justify-content-between">
-                    <div class="name col-md-6">
-                        <div class="control-group">
-                            <div class="form-group floating-label-form-group controls">
-                                <label>Name</label>
-                                <input type="text" class="form-control" placeholder="name" id="name" required data-validation-required-message="Please enter name of the ingredient.">
-                                <p class="help-block text-danger"></p>
+                <div id="ingredients">
+                    <div class="row justify-content-between" id="ingredient">
+                        <div class="name col-md-6">
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls">
+                                    <label>Name</label>
+                                    <input type="text" class="form-control" placeholder="name" id="name" required data-validation-required-message="Please enter name of the ingredient.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="amount col-sm-4 col-md-2">
-                        <div class="control-group">
-                            <div class="form-group floating-label-form-group controls">
-                                <label>Amount</label>
-                                <input type="text" class="form-control" placeholder="Amount" id="name" required data-validation-required-message="Please enter ingredient amount.">
-                                <p class="help-block text-danger"></p>
+                        <div class="amount col-sm-4 col-md-2">
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls">
+                                    <label>Amount</label>
+                                    <input type="text" class="form-control" placeholder="Amount" id="name" required data-validation-required-message="Please enter ingredient amount.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="unit col-sm-4 col-md-2">
-                        <div class="control-group">
-                            <div class="form-group floating-label-form-group controls">
-                                <label>Unit</label>
-                                <input type="text" class="form-control" placeholder="Unit" id="name" required data-validation-required-message="Please enter ingredient unit.">
-                                <p class="help-block text-danger"></p>
+                        <div class="unit col-sm-4 col-md-2">
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls">
+                                    <label>Unit</label>
+                                    <input type="text" class="form-control" placeholder="Unit" id="name" required data-validation-required-message="Please enter ingredient unit.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
                             </div>
                         </div>
+                        <div class="delete col-sm-1 col-md-1">
+                            <a href=""><i class="fas fa-trash-alt delete"></i></a>
+                        </div>
                     </div>
-                    <div class="delete col-sm-1 col-md-1">
-                        <a href=""><i class="fas fa-trash-alt delete"></i></a>
+                    <div class="row justify-content-between" >
+                        <div class="name col-md-6">
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls">
+                                    <label>Name</label>
+                                    <input type="text" class="form-control" placeholder="name" id="name" required data-validation-required-message="Please enter name of the ingredient.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="amount col-sm-4 col-md-2">
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls">
+                                    <label>Amount</label>
+                                    <input type="text" class="form-control" placeholder="Amount" id="name" required data-validation-required-message="Please enter ingredient amount.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="unit col-sm-4 col-md-2">
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls">
+                                    <label>Unit</label>
+                                    <input type="text" class="form-control" placeholder="Unit" id="name" required data-validation-required-message="Please enter ingredient unit.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="delete col-sm-1 col-md-1">
+                            <a href=""><i class="fas fa-trash-alt delete"></i></a>
+                        </div>
                     </div>
-                  
-                        
-                   
                 </div>
                 </br>
                 <div class="row ">
                     <div class="col-sm-4 icons ">
-                            <a href="" add_ingredients><i class="fas fa-plus"></i>Add ingredient</a>
+                            <a href="" add_ingredients id="add_ingredient"><i class="fas fa-plus"></i>Add ingredient</a>
                           
                        </div>
                 </div>
@@ -92,7 +123,7 @@
                                 </br>
                 <div class="row ">
                     <div class="col-sm-4 icons ">
-                            <a href="" add_ingredients><i class="fas fa-plus"></i>Add Step</a>
+                            <a href="#" id="add_step"><i class="fas fa-plus"></i>Add Step</a>
                           
                        </div>
                 </div>
