--- a/templates/layout.html
+++ b/templates/layout.html
@@ -106,6 +106,17 @@
     <script src="{{url_for('static',filename='js/clean-blog.min.js')}}"></script>
     <script src="{{url_for('static',filename='js/contact_me.js')}}"></script>
     <script src="{{url_for('static',filename='js/jqBootstrapValidation.js')}}"></script>
+    <script>
+        console.log("jquery")
+        
+        $("#add_ingredient").click(function(){
+            event.preventDefault();
+            var newIngredient = $("#ingredient").clone()
+            newIngredient.attr("id","")
+            newIngredient.appendTo("#ingredients")
+    });
+    </script>
+    
 </body>
 
 
