adding and removing new ingredients work

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -39,7 +39,7 @@
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls">
                                     <label>Name</label>
-                                    <input type="text" class="form-control" placeholder="name" id="name" required data-validation-required-message="Please enter name of the ingredient.">
+                                    <input type="text" class="form-control" placeholder="name"  required data-validation-required-message="Please enter name of the ingredient.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
@@ -48,7 +48,7 @@
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls">
                                     <label>Amount</label>
-                                    <input type="text" class="form-control" placeholder="Amount" id="name" required data-validation-required-message="Please enter ingredient amount.">
+                                    <input type="text" class="form-control" placeholder="Amount"  required data-validation-required-message="Please enter ingredient amount.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
@@ -57,13 +57,13 @@
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls">
                                     <label>Unit</label>
-                                    <input type="text" class="form-control" placeholder="Unit" id="name" required data-validation-required-message="Please enter ingredient unit.">
+                                    <input type="text" class="form-control" placeholder="Unit"  required data-validation-required-message="Please enter ingredient unit.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                         </div>
                         <div class="delete col-sm-1 col-md-1">
-                            <a href=""><i class="fas fa-trash-alt delete"></i></a>
+                            <a href="javascript:void(0);" class="remove_ingredient"><i class="fas fa-trash-alt delete"></i></a>
                         </div>
                     </div>
                     <div class="row justify-content-between" >
@@ -95,14 +95,14 @@
                             </div>
                         </div>
                         <div class="delete col-sm-1 col-md-1">
-                            <a href=""><i class="fas fa-trash-alt delete"></i></a>
+                            <a href="javascript:void(0);" class="remove_ingredient"><i class="fas fa-trash-alt delete"></i></a>
                         </div>
                     </div>
                 </div>
                 </br>
                 <div class="row ">
                     <div class="col-sm-4 icons ">
-                            <a href="" add_ingredients id="add_ingredient"><i class="fas fa-plus"></i>Add ingredient</a>
+                            <a href="javascript:void(0);" id="add_ingredient"><i class="fas fa-plus"></i>Add ingredient</a>
                           
                        </div>
                 </div>
@@ -123,7 +123,7 @@
                                 </br>
                 <div class="row ">
                     <div class="col-sm-4 icons ">
-                            <a href="#" id="add_step"><i class="fas fa-plus"></i>Add Step</a>
+                            <a href="javascript:void(0);" id="add_step"><i class="fas fa-plus"></i>Add Step</a>
                           
                        </div>
                 </div>
