--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,9 +29,6 @@
                         <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('recipes') }}">Recipes</a>
                     </li>
                     <li class="nav-item">
@@ -107,14 +104,41 @@
     <script src="{{url_for('static',filename='js/contact_me.js')}}"></script>
     <script src="{{url_for('static',filename='js/jqBootstrapValidation.js')}}"></script>
     <script>
-        console.log("jquery")
-        $(document).on("click", "a.remove_ingredient" , function() {
+        $(document).on("click", "a.remove_ingredient, a.remove_step" , function() {
             $(this).closest(".row").remove();
         });
         $(document).on("click","#add_ingredient",function(){
-            var newIngredient = $("#ingredient").clone()
-            newIngredient.attr("id","")
-            newIngredient.appendTo("#ingredients")
+            var new_ingredient =` <div class="row" >
+                        <div class="name col-11">
+                            <div class="control-group">
+                                <div class="form-group floating-label-form-group controls">
+                                    <label>Name</label>
+                                    <input type="text" class="form-control" name="ingredient_name" placeholder="Ingredient Name / Amount" required data-validation-required-message="Please enter name of the ingredient.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="delete col-1">
+                            <a href="javascript:void(0);" class="remove_ingredient"><i class="fas fa-trash-alt red"></i></a>
+                        </div>
+                    </div>`;
+            $(new_ingredient).appendTo('#ingredients');
+        });
+         $(document).on("click","#add_step",function(){
+            var new_step = ` <div class="row ">
+                        <div class="control-group col-11">
+                            <div class="form-group floating-label-form-group controls">
+                                <label>Step</label>
+                                <textarea row="2" class="form-control" placeholder="Step" name="step_name"  required data-validation-required-message="Please enter step."></textarea>
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="delete col-1">
+                            <a href="javascript:void(0);" class="remove_step"><i class="fas fa-trash-alt delete red"></i></a>
+                        </div>
+                    </div>`
+            $(new_step).appendTo("#steps");
         });
         
     </script>
