--- a/templates/meal.html
+++ b/templates/meal.html
@@ -14,8 +14,8 @@
         </div>
         
         <div class="icons col-xs-4">
-            <a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}"><i class="fas fa-edit edit"></i></a>
-            <a href=""><i class="fas fa-trash-alt delete"></i></a>
+            <a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}"><i class="fas fa-edit green"></i></a>
+            <a href=""><i class="fas fa-trash-alt red"></i></a>
         </div>
     </div>
 
@@ -30,7 +30,7 @@
         
         <ul>
             {% for ingredient in recipe.ingredient %}
-            <li>{{ingredient.name}}-{{ingredient.amount}} {{ingredient.unit}}</li>
+                <li>{{ingredient}}</li>
             {% endfor %}
         </ul>
     </div>
@@ -40,7 +40,7 @@
         <h4>Preparation directions</h3>
           <ol>
              {% for step in recipe.step %}
-                    <li>{{step.description}}</li>
+                    <li>{{step}}</li>
              {% endfor %}
           </ol>
     </div>
