add_ingredient/step  button width fixed and script moved to main.js

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -65,7 +65,7 @@
                     <!--</div>-->
                     
                     <div class="row" >
-                        <div class="name col-11">
+                        <div class="name col-10">
                             <div class="control-group">
                                 <div class="form-group floating-label-form-group controls">
                                     <label>Name</label>
@@ -83,7 +83,7 @@
                 </div>
                 </br>
                 <div class="row ">
-                    <div class="col-sm-4 icons ">
+                    <div class="col-8 icons ">
                             <a href="javascript:void(0);" id="add_ingredient" class="green"><i class="fas fa-plus"></i>Add ingredient</a>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                 <div id="steps">
                     <h3>Steps:</h3>
                     <div class="row ">
-                        <div class="control-group col-11">
+                        <div class="control-group col-10">
                             <div class="form-group floating-label-form-group controls">
                                 <label>Step</label>
                                 <textarea row="2" class="form-control" placeholder="Step" name='step_name'  required data-validation-required-message="Please enter step."></textarea>
@@ -109,7 +109,7 @@
                     </br>
                 </div>
                 <div class="row ">
-                        <div class="col-sm-4 icons ">
+                        <div class="col-8 icons ">
                                 <a href="javascript:void(0);" id="add_step" class="green"><i class="fas fa-plus "></i>Add Step</a>
                         </div>
                 </div>
