--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('recipes') }}">Recipes</a>
+                        <a class="nav-link" href="{{ url_for('add_recipe') }}">Add recipe</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
