--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -103,7 +103,7 @@
                 </div>
                 <br>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary" id="sendMessageButton">Apply</button>
+                    <button type="submit" class="btn btn-primary" id="sendMessageButton">Uptade</button>
                 </div>
         </form>
         </div>
