--- a/templates/meal.html
+++ b/templates/meal.html
@@ -15,7 +15,7 @@
         
         <div class="icons col-xs-4">
             <a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}"><i class="fas fa-edit green"></i></a>
-            <a href=""><i class="fas fa-trash-alt red"></i></a>
+            <a href="{{ url_for('delete_recipe',recipe_id=recipe._id)}}"><i class="fas fa-trash-alt red"></i></a>
         </div>
     </div>
 
