card button changed on icon

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -42,6 +42,16 @@
                         <p class="help-block text-danger"></p>
                     </div>
                 </div>
+                
+                <!--Author name field-->
+                
+                 <div class="control-group">
+                    <div class="form-group floating-label-form-group controls">
+                        <label>Author</label>
+                        <input type="text" class="form-control" name="author"  placeholder="Author" id="author" required data-validation-required-message="Please enter author name.">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                </div>
                 </br>
                 
                 <!--Ingredients fields-->
@@ -99,7 +109,7 @@
                 </div>
                 <br>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary" id="sendMessageButton">Apply</button>
+                    <button type="submit" class="btn btn-primary" id="sendMessageButton">Add</button>
                 </div>
         </form>
         </div>
