--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -42,6 +42,17 @@
                         <p class="help-block text-danger"></p>
                     </div>
                 </div>
+                
+                 <!--Author name field-->
+                
+                 <div class="control-group">
+                    <div class="form-group floating-label-form-group controls">
+                        <label>Author</label>
+                        <input type="text" class="form-control" name="author"  value="{{recipe.author}}" placeholder="Author" id="author" required data-validation-required-message="Please enter author name.">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                </div>
+                </br>
                 </br>
                 
                 <!--Ingredients fields-->
@@ -109,7 +120,7 @@
         </div>
     </div>
 </div>
-
+d
 
 
 {% endblock %}
