--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,36 +7,73 @@
     border: none;
 }
 
-.button{
+/*.button{*/
+/*  position: absolute;*/
+/*  font-size: 18px;*/
+/*  color: #fff;*/
+/*  top:30%;*/
+/*  left: 0; */
+/*  right: 0; */
+/*  margin-left: auto; */
+/*  margin-right: auto;*/
+/*  transform:scale(0);*/
+/*}*/
+/*.button a{*/
+/*	text-decoration:none;*/
+/*	border:1px solid #fff;*/
+/*	padding:5px 10px;*/
+/*	border-radius:10px;*/
+/*	color:#fff;*/
+/*	background:#007bff;*/
+/*}*/
+
+.animated i {
   position: absolute;
-  font-size: 18px;
-  color: #fff;
-  top:30%;
-  left: 0; 
-  right: 0; 
-  margin-left: auto; 
-  margin-right: auto;
-  transform:scale(0);
+  top: 38%;
+  left: 50%;
+  font-size: 40px;
+  color: #fafafa;
+  width: 40px;
+  height: 40px;
+  line-height: 50px;
+
+  -webkit-transform: translate(-50%, -50%) scale(0);
+  -ms-transform: translate(-50%, -50%) scale(0);
+  transform: translate(-50%, -50%) scale(0);
+  -webkit-transition: -webkit-transform 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  transition: -webkit-transform 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  -o-transition: transform 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  transition: transform 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  transition: transform 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045), -webkit-transform 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
 }
-.button a{
-	text-decoration:none;
-	border:1px solid #fff;
-	padding:5px 10px;
-	border-radius:10px;
-	color:#fff;
-	background:#007bff;
+
+
+.animated:hover img {
+  opacity: 0.6;
+}
+
+.animated:hover i,
+.animated:focus i {
+  -webkit-transform: translate(-50%, -50%) scale(2);
+  -ms-transform: translate(-50%, -50%) scale(2);
+  transform: translate(-50%, -50%) scale(2);
+  -webkit-transition: -webkit-transform 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: -webkit-transform 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  -o-transition: transform 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: transform 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: transform 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275), -webkit-transform 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .animated:hover img{
 	opacity: 0.6;
 }
-.animated * {
-	transition: all 500ms ease-in-out;
-}
+/*.animated * {*/
+/*	transition: all 500ms ease-in-out;*/
+/*}*/
 
-.animated:hover .button{
-	transform: scale(1.5);
-}
+/*.animated:hover .button{*/
+/*	transform: scale(1.5);*/
+/*}*/
 
 .delete i {
       margin-top: 30px;
@@ -45,9 +82,22 @@
   padding-right: 10px
 }
 
-.icons i{
+.icons i,.header_icons i{
   padding-right: 20px;
   font-size: 30px;
+  transition: all 500ms ease-in-out;
+}
+
+.icons i:hover,.header_icons i:hover{
+  font-size: 35px;
+}
+
+.header_icons{
+   text-align: right;
+}
+
+.meal_image{
+  margin-bottom: 10px;
 }
 
 .green{
@@ -56,6 +106,10 @@
 .red{
   color: #ff0000;
 }
+.author p{
+  margin: 0 5px;
+  color: #888;
+}
 #ingredient, #step{
   display: none; 
 }
@@ -63,7 +117,7 @@
   .card-img-top{
        height:220px;
   }
-  .button{
-  	top:20%;
+  .animated i{
+  	top:25%;
   }
 }
