--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,26 @@
 {% extends 'layout.html' %} {% block img %}
 <header class="masthead" style="background-image: url('../static/img/carrot.jpg')">
-{% endblock %} 
-{% block header %}
-  <h1>Cook with Us</h1>
-  <span class="subheading">Recipes created with passion and love</span>
-{% endblock %}
-{% block content %} 
- <div class="container">
-   <div class="row text-center">
-{% for recipe in recipes %}
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <div class="animated">
-          <img class="card-img-top" src="{{recipe.image}}" alt="">
-           <p class="button"><a href="{{url_for('about_recipe', recipe_id=recipe._id)}}">Read more</a></p>
-          <div class="card-body">
-            <h4 class="card-title">{{recipe.name}}</h4>
-          </div>
-          </div>
+    {% endblock %} {% block header %}
+    <h1>Cook with Us</h1>
+    <span class="subheading">Recipes created with passion and love</span> {% endblock %} {% block content %}
+    <div class="container">
+        <div class="row text-center">
+            {% for recipe in recipes %}
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card h-100">
+                    <div class="animated">
+                        <img class="card-img-top" src="{{recipe.image}}" alt="">
+                        <a href="{{url_for('about_recipe', recipe_id=recipe._id)}}"><i class="fas fa-info-circle"></i></a>
+                        <div class="card-body">
+                            <h4 class="card-title">{{recipe.name}}</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            {% endfor %}
         </div>
-      </div>
- 
+    </div>
 
-{% endfor %}
- </div>
-</div>
-
-{% endblock %}
+    {% endblock %}
