--- a/templates/meal.html
+++ b/templates/meal.html
@@ -9,19 +9,25 @@
 {% block content %}
 <div class="container">
     <div class=" row justify-content-between recipe_header">
-        <div class="recipe_name col-xs-8">
+        <div class="recipe_name col-7">
             <h2>{{recipe.name}}</h2>
         </div>
         
-        <div class="icons col-xs-4">
+        <div class="header_icons col-5">
             <a href="{{url_for('edit_recipe', recipe_id=recipe._id)}}"><i class="fas fa-edit green"></i></a>
             <a href="{{ url_for('delete_recipe',recipe_id=recipe._id)}}"><i class="fas fa-trash-alt red"></i></a>
         </div>
     </div>
+    <div class="row">
+        <div class="col author">
+            <p>by {{recipe.author}}</p>
+        </div>
+        
+    </div>
 
 <hr>
 <div class="row">
-    <div class=" col-md-5">
+    <div class=" col-md-6 meal_image" >
         <img style="width:100%" src="{{ recipe.image}}" alt="Image for {{recipe.name}}">
     </div>
    
@@ -35,7 +41,7 @@
         </ul>
     </div>
     
-    <div class="col-md-10">
+    <div class="col-md-12">
         <br>
         <h4>Preparation directions</h3>
           <ol>
