--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,26 +7,6 @@
     border: none;
 }
 
-/*.button{*/
-/*  position: absolute;*/
-/*  font-size: 18px;*/
-/*  color: #fff;*/
-/*  top:30%;*/
-/*  left: 0; */
-/*  right: 0; */
-/*  margin-left: auto; */
-/*  margin-right: auto;*/
-/*  transform:scale(0);*/
-/*}*/
-/*.button a{*/
-/*	text-decoration:none;*/
-/*	border:1px solid #fff;*/
-/*	padding:5px 10px;*/
-/*	border-radius:10px;*/
-/*	color:#fff;*/
-/*	background:#007bff;*/
-/*}*/
-
 .animated i {
   position: absolute;
   top: 38%;
@@ -47,7 +27,6 @@
   transition: transform 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045), -webkit-transform 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
 }
 
-
 .animated:hover img {
   opacity: 0.6;
 }
@@ -67,13 +46,9 @@
 .animated:hover img{
 	opacity: 0.6;
 }
-/*.animated * {*/
-/*	transition: all 500ms ease-in-out;*/
-/*}*/
-
-/*.animated:hover .button{*/
-/*	transform: scale(1.5);*/
-/*}*/
+.animated a:hover{
+  text-decoration: none;
+}
 
 .delete i {
       margin-top: 30px;
