--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,13 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card h-100">
                     <div class="animated">
-                        <img class="card-img-top" src="{{recipe.image}}" alt="">
-                        <a href="{{url_for('about_recipe', recipe_id=recipe._id)}}"><i class="fas fa-info-circle"></i></a>
-                        <div class="card-body">
-                            <h4 class="card-title">{{recipe.name}}</h4>
-                        </div>
+                        <a href="{{url_for('about_recipe', recipe_id=recipe._id)}}">
+                            <img class="card-img-top" src="{{recipe.image}}" alt="">
+                            <i class="fas fa-info-circle"></i>
+                            <div class="card-body">
+                                <h4 class="card-title">{{recipe.name}}</h4>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
