--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,24 @@
     <h1>Cook with Us</h1>
     <span class="subheading">Recipes created with passion and love</span> {% endblock %} {% block content %}
     <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                
+            </div>
+            <div class="col-12 col-md-6">
+                <form   method='POST'>
+                    <div class="row justify-content-end">
+                        <div class="md-form mb-3 col-8 col-md-9 search_input" >
+                          <input class="form-control " name="search_input" type="text" placeholder="Search" aria-label="Search"/>
+                        </div>
+                        <div class="col-4 col-md-3 flex-row-reverse">
+                             <input class="btn btn-primary" type="submit" name="action" value="search"/>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <hr>
         <div class="row text-center">
             {% for recipe in recipes %}
             <div class="col-lg-3 col-md-6 mb-4">
